fix: CTA link contrast

--- a/src/theme/ItaliaTheme/Blocks/_ctaBlock.scss
+++ b/src/theme/ItaliaTheme/Blocks/_ctaBlock.scss
@@ -22,8 +22,16 @@
       h2,
       h3 {
         margin: 0 0 1.5rem;
-        color: $secondary-text;
         font-size: 2.25rem;
+      }
+      h2,
+      h3,
+      a {
+        &,
+        span {
+          color: $secondary-text;
+          text-decoration-color: $secondary-text;
+        }
       }
 
       p:last-of-type {
@@ -98,6 +106,7 @@
 
       .cta-tile-text {
         &,
+        a,
         h3 {
           color: #fff;
         }
